# airflow

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.oracle  Makefile  README.md  airflow_settings.yaml  docker-compose.yaml  pyproject.toml  requirements.dbt.txt  requirements.dev.txt  requirements.gcp.txt  requirements.oci.txt  requirements.txt  setup.py
connections/: dev.json
dags/: dag_job.py  example_api_to_gcs_dag.py  example_dag.py  loader.py  projeto2_dados.csv  projeto2_etl.py  run_gusty.py
dags/dsa/: dsa-p1-etl.py  dsa_01_hello_world.py  dsa_02_hello_world.py  dsa_03_hello_world.py  dsa_04_hello_world.py  dsa_05_hello_world.py  projeto2_dag.py
dags/etl/: dsa-p1-etl.py
dags/example/: dag_api_to_gcs.py  demo_api_to_bq.py  demo_api_to_gcs.py
dags/gcp/: dag_job.py  test_gcs_connection_dag.py
dags/pipeline/: dag_gcp.py
dags/templates/: bigquery_tasks.py  cloud_function_tasks.py  cloud_run_tasks.py  dataform_tasks.py  gcs_tasks.py  log_tasks.py  notify_tasks.py  pubsub_tasks.py
dags/utils/: gcp.py
data/: dsa_p1.db  projeto2_database.db
diagrams/: api.puml  arquivo_locais.puml  banco_relacional.puml  sass.puml
docker/: Dockerfile  Makefile  docker-compose.yaml
docs/: airflow_providers_common_sql.md  airflow_providers_google.md  airflow_providers_http.md  pipeline_naming_best_practices.md  task_naming_patterns.md
docs/diagrams/: arquivos_storage.puml  mensageria_externa.puml  streaming.puml
plugins/operators/: api_to_bq_operator.py  api_to_gcs_operator.py  base_safe_operator.py
scripts/: dsa-p1-etl.sh  dsa-p1-insert-sqlite.sh
server/: install_oracle_client.sh
setup/connections/: dev.json
setup/variables/: dev.json  (+1 more)
tests/: test_dag_integrity.py  test_hello_task.py
variables/: dev.json
(+17 files in other folders)
