[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airflow"
version = "0.1.0"
description = "Airflow"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Antonio Carlos de Lima Júnior", email = "ac@marketmining.com.br" }
]
dependencies = [
  "python-dotenv~=1.0",
  "loguru~=0.7",
  "pendulum~=2.1"
]

[project.urls]
homepage = "https://github.com/acnaweb/airflow"

[project.optional-dependencies]
dependencies = [
    "requests>=2.25",
    "google-auth>=2.0",
    "loguru>=0.6",
    "jsonpath-ng>=1.5",
    "apache-airflow>=2.7",
    "apache-airflow-providers-google>=10.0.0",
    "pendulum>=2.1"
]

quality = [
    "flake8~=6.1",
    "black~=22.3",
    "pytest-cov~=4.0",
    "pytest~=7.0",
    "isort~=6.0",
]

[tool.setuptools.packages.find]
where = ["dags"]

[project.scripts]
