[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-pkg"
version = "0.1.0"
description = "Airflow"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Antonio Carlos de Lima Júnior", email = "ac@marketmining.com.br" }
]
dependencies = [
  "loguru~=0.7",
  "pendulum~=2.1",
  "requests~=2.25",
  "apache-airflow[google]~=2.10",
  "pyarrow",
  "gusty~=0.23"
]

[project.urls]
homepage = "https://github.com/acnaweb/airflow"

[project.optional-dependencies]
dev = [
    "pytest"
]

quality = [
    "flake8~=6.1",
    "black~=22.3",
    "pytest-cov~=4.0",
    "pytest~=7.0",
    "isort~=6.0",
]

[tool.setuptools.packages.find]
where = ["dags", "plugins"]

[project.scripts]
